System Environment: -------------------------- Distro: Ubuntu 12.04 Arch: x86_64 cairo master db488a1703d4ef3bcbd54138b51c01600a2f4d3a dri2proto master 4eeacce4c4a300b938b7e3fb78a8e443c491780b drm master 844d75e5a0b3b8f3466a24256955e886275fb298 glproto master ec1eec4355ee4a6c5134f2178192f10b6d28a87a kbproto master 391a1f6de6315fc0196d407d800597488315cccb libX11 master d45b3fc19fbe95c41afc4e51d768df6d42332010 libxkbcommon master 3477d9e4480f4f2607d371345cc1c09bb8a35c78 macros master 0890e4003aacfa7113ab3f4e3ad7c5636f8e922a mesa master df3721fd2e10ef27ce12a0c1025c9770137fa8f7 pixman master 2e17b6dd4ee7c32684fb7ffc70d3ad3ebf7cb2ef wayland master 0371668dcca5aa29c0fc4b59b974e40bcf073563 weston master 4e07236e8702ff22e2398214a15f7d1e7561caf6 Detailed Description: ----------------------------- I have observed multiple issues with rendering under the DnD client - I combined them all into this one bug. Issue 1: When a flower is dropped it "flashes" for a brief moment only when mouse is stopped, if mouse cursor is in movement the flower won't flash Issue 2: When a flower is clicked it moves a couple pixels - even if the mouse hasn't moved. Issue 3: When you release the mouse button after draging and dropping, but don't move the mouse the incorrect cursor is displayed. Issue 4: When DND client is spun around it's axis and a flower is picked up to be dragged it "snaps" back to it's original position - sometimes off the mouse cursor Steps to Reproduce: ---------------------------- 1. start weston under X11 or DRM mode 2. ./dnd 3. Drag and drop items (same window is OK), click items, spin window and drop items, release mouse and observe the incorrect cursor
These are... great. I've just mailed off a patch that potentially resolves #3 I can't reproduce #2. Perhaps this has been fixed in some way, or perhaps it's just really difficult to let go of the mouse button without moving at least one pixel? I guess #1 occurs because the item is actually not present for a screen refresh between mouse button release and addition to the dnd client window. I'm not sure I can think of a way to resolve this. #4 is simply because the dragged item loses its orientation when it leaves the rotated window. Very gross. I'll see if I can come up with something.
commit ba0f33dc2881006e206d32772fc7adda48fe18ac Author: Derek Foreman <derekf@osg.samsung.com> Date: Thu Nov 20 15:32:40 2014 -0600 dnd: Fix some mouse cursor issues Fixes issue 3.
-- GitLab Migration Automatic Message -- This bug has been migrated to freedesktop.org's GitLab instance and has been closed from further activity. You can subscribe and participate further through the new bug through this link to our GitLab instance: https://gitlab.freedesktop.org/wayland/weston/issues/28.
Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.